czesc 1 - zad 5