@@ -5,11 +5,9 @@ public class ControlFrequency {
     private final int ramSize;
     private final int processCount;
     private final int pagesVariety;
-    private final int timeWindow; // okno czasowe dla pomiaru PPF
+    private final int timeWindow; // okno czasowe dla pomiaru PPF Δt
     private final double lowerThreshold; // L - dolny prog czestosci bledow strony
     private final double upperThreshold; // U - gorny prog czestosci bledow strony
-    private int numCanceledProcesses; // Tracks the number of processes with no frames
-
     public ControlFrequency(List<List<Integer>> pageReferences, int ramSize, int timeWindow, double lowerThreshold, double upperThreshold, int pagesVariety) {
         this.pageReferences = new ArrayList<>(pageReferences);
         this.ramSize = ramSize;
@@ -18,60 +16,49 @@ public class ControlFrequency {
         this.lowerThreshold = lowerThreshold;
         this.upperThreshold = upperThreshold;
         this.pagesVariety = pagesVariety;
-        this.numCanceledProcesses = 0;
     }
 
-    // Strategy 3: Page Fault Frequency Control
     public int simulate() {
         int totalPageFaults = 0;
-        List<Integer> allocatedFramesPerProcess = new ArrayList<>(Collections.nCopies(processCount, 0));
+        List<Integer> dedicatedFramesPerProcess = new ArrayList<>(Collections.nCopies(processCount, 0));
         List<Integer> totalPageFaultsPerProcess = new ArrayList<>(Collections.nCopies(processCount, 0));
 
-        // Initial proportional allocation
-        for (int i = 0; i < processCount; i++) {
+        for (int i = 0; i < processCount; i++) { //wyznaczenie wedlug przydzialu proporcjonalnego
             List<Integer> pageReferences = this.pageReferences.get(i);
             int processVariety = Collections.max(pageReferences) - Collections.min(pageReferences) + 1;
             int framesPerProcess = (int) Math.floor((double) processVariety / pagesVariety * ramSize);
-            allocatedFramesPerProcess.set(i, framesPerProcess);
+            dedicatedFramesPerProcess.set(i, framesPerProcess);
         }
 
-        // Simulate page references with PPF control over entire reference length
-        int totalReferences = pageReferences.get(0).size();
+        //petla odpala LRU dla kazdego procesu w aktualnym Δt i dodaje bledy stron
+        int totalReferences = pageReferences.getFirst().size();
         for (int t = 0; t < totalReferences; t += timeWindow) {
             List<Integer> currentPageFaultsPerProcess = new ArrayList<>(Collections.nCopies(processCount, 0));
 
             for (int i = 0; i < processCount; i++) {
                 List<Integer> pageReferences = this.pageReferences.get(i).subList(t, Math.min(t + timeWindow, totalReferences));
-                int framesPerProcess = allocatedFramesPerProcess.get(i);
+                int framesPerProcess = dedicatedFramesPerProcess.get(i);
                 LRUSimulator lruSimulator = new LRUSimulator(pageReferences, framesPerProcess);
                 int pageFaults = lruSimulator.simulateLRU();
                 currentPageFaultsPerProcess.set(i, pageFaults);
                 totalPageFaultsPerProcess.set(i, totalPageFaultsPerProcess.get(i) + pageFaults);
                 totalPageFaults += pageFaults;
 
-                // Check for no frames and mark process as canceled
-                if (framesPerProcess == 0) {
-                    numCanceledProcesses++;
-                }
             }
 
-            // Adjust frame allocation based on PPF
             for (int i = 0; i < processCount; i++) {
-                double ppf = (double) currentPageFaultsPerProcess.get(i) / timeWindow;
+                double ppf = (double) currentPageFaultsPerProcess.get(i) / timeWindow; //e_i / Δt
                 if (ppf > upperThreshold) {
-                    allocatedFramesPerProcess.set(i, allocatedFramesPerProcess.get(i) + 1);
-                } else if (ppf < lowerThreshold && allocatedFramesPerProcess.get(i) > 1) {
-                    allocatedFramesPerProcess.set(i, allocatedFramesPerProcess.get(i) - 1);
+                    dedicatedFramesPerProcess.set(i, dedicatedFramesPerProcess.get(i) + 1); // dodaje ramke
+                } else if (ppf < lowerThreshold && dedicatedFramesPerProcess.get(i) >= 1) {
+                    dedicatedFramesPerProcess.set(i, dedicatedFramesPerProcess.get(i) - 1); // zabieram
                 }
             }
         }
 
-        // Print total page faults per process at the end of simulation
         for (int i = 0; i < processCount; i++) {
             System.out.println("Proces nr " + (i + 1) + " wygenerowal bledow: " + totalPageFaultsPerProcess.get(i));
         }
-
-        System.out.println("Total canceled processes: " + numCanceledProcesses);
         return totalPageFaults;
     }
 }
